tests/baselines/reference/arrayAssignmentTest6.errors.txt
arrayAssignmentTest6.ts(1,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== arrayAssignmentTest6.ts (1 errors) ====
    module Test {
           ~~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        interface IState {
        }
        interface IToken {
            startIndex: number;
        }
        interface ILineTokens {
            tokens: IToken[];
            endState: IState;
        }
        interface IMode {
            tokenize(line:string, state:IState, includeStates:boolean):ILineTokens;
        }
        export class Bug implements IMode {
            public tokenize(line:string, tokens:IToken[], includeStates:boolean):ILineTokens {
                return null;
            }
        }    
    }
    